GH-69 - Switch to Stream.toList().